Page accueil et menu 4

--- a/menu_4.html
+++ b/menu_4.html
@@ -10,8 +10,7 @@
 <body>
 	<header>
 		<div><i class="fas fa-arrow-left"></i></div>
-		<span><img src="images/logo/ohmyfood.png" alt="logo mobile"></span>
-		<img class="logo2" src="images/logo/ohmyfood2.svg" alt="logo desktop">
+		<img src="images/logo/ohmyfood.png" alt="logo mobile">
 	</header>
 
 	<section class="section_one_menu_one">
@@ -28,6 +27,7 @@
 	<div class="all_section">
 		<div class="section_two_menu_one">
 			<h2>ENTRÉES</h2>
+			<img src="images/barre.png" alt="barre">
 			<div class="card slide_one">
 				<div class="title_description">
 					<h3>Tartare de poulpe acidulé</h3>
@@ -55,6 +55,7 @@
 
 		<div class="section_two_menu_one">
 			<h2>PLATS</h2>
+			<img src="images/barre.png" alt="barre">
 			<div class="card slide_four">
 				<div class="title_description">
 					<h3>Coquilles Saint-Jacques</h3>
@@ -82,6 +83,7 @@
 
 		<div class="section_two_menu_one third_slide">
 			<h2>DESSERTS</h2>
+			<img src="images/barre.png" alt="barre">
 			<div class="card slide_seven">
 				<div class="title_description">
 					<h3>Pétales de violettes glacés</h3>
@@ -109,7 +111,7 @@
 	</div>
 </section>
 
-<section class="button">
+<section class="section_button">
 	<a class="button" href="#">Commander</a>
 </section>
 
