--- a/home_page.html
+++ b/home_page.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="ohmyfood.css">
+	<link rel="stylesheet" type="text/css" href="home_page.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
 	<title>ohmyfood.com</title>
 </head>
@@ -12,8 +12,7 @@
 	</div>
 
 	<header>
-		<span><img src="images/logo/ohmyfood.png" alt="logo mobile"></span>
-		<img class="logo2" src="images/logo/ohmyfood2.svg" alt="logo desktop">
+		<img src="images/logo/ohmyfood.png" alt="logo mobile">
 	</header>
 
 	<div class="all">
@@ -26,7 +25,7 @@
 	<section class="section_one">
 		<h1>Réservez le menu qui vous convient</h1>
 		<p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-		<a class="button" href="#">Explorer nos restaurants</a>
+		<a class="button" href="#restaurant">Explorer nos restaurants</a>
 	</section>
 
 	<section class="section_two">
@@ -39,19 +38,21 @@
 	</section>
 
 	<section class="section_three">
-		<h2>Restaurants</h2>
+		<div id="restaurants">		
+			<h2>Restaurants</h2>
 		<div class="all_card">
 			<div class="new"><p>Nouveau</p></div>
-				<a href="file:///Users/clarabernadou/Documents/OC/P3_bernadou_clara/Ohmyfood_menu_1.html" class="card">
+				<a href="#" class="card">
 					<img src="images/restaurants/La_palette_du_gout.jpg" alt="Restaurant La palette du goût">
 					<div class="contents">
-						<div class="description"><h3>La palette du goût</h3>
+						<div class="description">
+						<h3>La palette du goût</h3>
 						<p>Ménilmontant</p></div>
 						<div class="icon"><i class="far fa-heart"></i></div>
 					</div>
 				</a>
 			
-				<div class="new_two"><p>Nouveau</p></div>
+				<div class="new"><p>Nouveau</p></div>
 				<a href="#" class="card">
 					<img src="images/restaurants/La_note_enchantee.jpg" alt="Restaurant La note enchantée">
 					<div class="contents">
@@ -65,7 +66,8 @@
 				<a href="#" class="card">
 					<img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française">
 					<div class="contents">
-						<div class="description"><h3>À la française</h3>
+						<div class="description">
+						<h3>À la française</h3>
 						<p>Cité Rouge</p></div>
 						<div class="icon"><i class="far fa-heart"></i></div>
 					</div>
@@ -74,12 +76,14 @@
 				<a href="#" class="card">
 					<img src="images/restaurants/Le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
 					<div class="contents">
-						<div class="description"><h3>Le délice des sens</h3>
+						<div class="description">
+						<h3>Le délice des sens</h3>
 						<p>Folie-Méricout</p></div>
 						<div class="icon"><i class="far fa-heart"></i></div>
 					</div>
 				</a>
 		</div>
+	</div>
 	</section>
 	</div>
 
