Page d'accueil et menu 4
modifications du 01/12

--- a/home_page.html
+++ b/home_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,8 @@
 	<title>ohmyfood.com</title>
 </head>
 <body>
-	<div class="spin">
+	<div class="loader">
+		<div class="lds-dual-ring"></div>
 	</div>
 
 	<header>
@@ -25,7 +26,7 @@
 	<section class="section_one">
 		<h1>Réservez le menu qui vous convient</h1>
 		<p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-		<a class="button" href="#restaurant">Explorer nos restaurants</a>
+		<a class="button" href="#restaurants">Explorer nos restaurants</a>
 	</section>
 
 	<section class="section_two">
@@ -48,7 +49,7 @@
 						<div class="description">
 						<h3>La palette du goût</h3>
 						<p>Ménilmontant</p></div>
-						<div class="icon"><i class="far fa-heart"></i></div>
+							<i class="far fa-heart"></i>
 					</div>
 				</a>
 			
@@ -64,11 +65,12 @@
 				</a>
 
 				<a href="#" class="card">
-					<img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française">
+					<div><img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française"></div>
 					<div class="contents">
 						<div class="description">
-						<h3>À la française</h3>
-						<p>Cité Rouge</p></div>
+							<h3>À la française</h3>
+							<p>Cité Rouge</p>
+						</div>
 						<div class="icon"><i class="far fa-heart"></i></div>
 					</div>
 				</a>
