--- a/menu_4.html
+++ b/menu_4.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="ohmyfood_menu_four.css">
+	<link rel="stylesheet" type="text/css" href="menu_4.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
 	<title>ohmyfood.com</title>
 </head>
 <body>
 	<header>
-		<div><i class="fas fa-arrow-left"></i></div>
-		<img src="images/logo/ohmyfood.png" alt="logo mobile">
+			<a href="file:///Users/clarabernadou/Documents/OC/P3_bernadou_clara/home_page.html"><i class="fas fa-arrow-left"></i></a>
+			<img src="images/logo/ohmyfood.png" alt="logo mobile">
 	</header>
 
 	<section class="section_one_menu_one">
@@ -31,25 +31,28 @@
 			<div class="card slide_one">
 				<div class="title_description">
 					<h3>Tartare de poulpe acidulé</h3>
-					<p>Au zests d'orange</p>
+					<p class="other">Au zests d'orange</p>
 				</div>
 				<p class="price">25€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_two">
 				<div class="title_description">
 					<h3>Velouté aux légumes d'antan</h3>
-					<p>Carotte, panais, topinambour</p>
+					<p class="other">Carotte, panais, topinambour</p>
 				</div>
 				<p class="price">35€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_three">
 				<div class="title_description">
 					<h3>Soupe à l'oignon</h3>
-					<p>Revisitée</p>
+					<p class="other">Revisitée</p>
 				</div>
 				<p class="price">20€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 		</div>
 
@@ -59,25 +62,28 @@
 			<div class="card slide_four">
 				<div class="title_description">
 					<h3>Coquilles Saint-Jacques</h3>
-					<p>Accompagnées d'une purée de panais</p>
+					<p class="other">Accompagnées d'une purée de panais</p>
 				</div>
 				<p class="price">40€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
 				<div class="title_description">
 					<h3>Magret de canard</h3>
-					<p>Et parmentier de pommes de terre</p>
+					<p class="other">Et parmentier de pommes de terre</p>
 				</div>
 				<p class="price">35€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_six">
 				<div class="title_description">
 					<h3>Pigeonneau d’Ille-et-Vilaine</h3>
-					<p>Sur son lit de gnocchis aux légumes</p>
+					<p class="other">Sur son lit de gnocchis aux légumes</p>
 				</div>
 				<p class="price">44€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 		</div>
 
@@ -87,31 +93,35 @@
 			<div class="card slide_seven">
 				<div class="title_description">
 					<h3>Pétales de violettes glacés</h3>
-					<p>Et purée de noisettes</p>
+					<p class="other">Et purée de noisettes</p>
 				</div>
 				<p class="price">18€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_eight">
 				<div class="title_description">
 					<h3>Fondant au chocolat</h3>
-					<p>Revisitée</p>
+					<p class="other">Revisitée</p>
 				</div>
 				<p class="price">22€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
 			<div class="card slide_nine">
 				<div class="title_description">
 					<h3>Millefeuille croustillant</h3>
-					<p>Myrtilles et pâte d’amande</p>
+					<p class="other">Myrtilles et pâte d’amande</p>
 				</div>
 				<p class="price">23€</p>
+				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 		</div>
 	</div>
 </section>
 
 <section class="section_button">
+	<h2>button</h2>
 	<a class="button" href="#">Commander</a>
 </section>
 
