P3 - Home page + all menu
Home page modification + creation of all menus

--- a/home_page.html
+++ b/home_page.html
@@ -49,7 +49,9 @@
 						<div class="description">
 						<h3>La palette du goût</h3>
 						<p>Ménilmontant</p></div>
+						<div class="box">
 							<i class="far fa-heart"></i>
+						</div>
 					</div>
 				</a>
 			
