--- a/menu_1.html
+++ b/menu_1.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
-	<title>À la française - Ohmyfood</title>
+	<title>La palette du goût - Ohmyfood.com</title>
 </head>
 <body>
 	<header>
@@ -15,10 +15,10 @@
 	</header>
 
 	<section class="section_one_menu_one">
-		<img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française">
+		<img src="images/restaurants/La_palette_du_gout.jpg" alt="Restaurant La palette du goût">
 		<div>
 			<div class="title_one">
-			<h1>À la française</h1>
+			<h1>La palette du goût</h1>
 			<a><i class="far fa-heart"></i></a>
 			</div>
 		</div>
@@ -31,8 +31,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_one">
 				<div class="title_description">
-					<h3>Tartare de poulpe acidulé</h3>
-					<p class="other">Au zests d'orange</p>
+					<h3>Fricassée d'escargot</h3>
+					<p class="other">Au piment d'Espelette</p>
 				</div>
 				<p class="price">25€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -40,8 +40,8 @@
 
 			<div class="card slide_two">
 				<div class="title_description">
-					<h3>Velouté aux légumes d'antan</h3>
-					<p class="other">Carotte, panais, topinambour</p>
+					<h3>Foie gras de canard mi-cuit</h3>
+					<p class="other">Et ses copeaux de truffe noire</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -49,8 +49,8 @@
 
 			<div class="card slide_three">
 				<div class="title_description">
-					<h3>Soupe à l'oignon</h3>
-					<p class="other">Revisitée</p>
+					<h3>Oeuf au plat</h3>
+					<p class="other">Assaisonné à la truffe sur lit de caviar</p>
 				</div>
 				<p class="price">20€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -62,8 +62,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_four">
 				<div class="title_description">
-					<h3>Coquilles Saint-Jacques</h3>
-					<p class="other">Accompagnées d'une purée de panais</p>
+					<h3>Filet de boeuf aux herbes</h3>
+					<p class="other">Accompagné de sa ribambelle de légumes</p>
 				</div>
 				<p class="price">40€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -71,8 +71,8 @@
 
 			<div class="card slide_five">
 				<div class="title_description">
-					<h3>Magret de canard</h3>
-					<p class="other">Et parmentier de pommes de terre</p>
+					<h3>Parmentier de queue de boeuf</h3>
+					<p class="other">À la truffe noire sur sa purée de panais</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -80,8 +80,8 @@
 
 			<div class="card slide_six">
 				<div class="title_description">
-					<h3>Pigeonneau d’Ille-et-Vilaine</h3>
-					<p class="other">Sur son lit de gnocchis aux légumes</p>
+					<h3>Filet de turbot</h3>
+					<p class="other">Aux agrumes</p>
 				</div>
 				<p class="price">44€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -93,8 +93,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_seven">
 				<div class="title_description">
-					<h3>Pétales de violettes glacés</h3>
-					<p class="other">Et purée de noisettes</p>
+					<h3>Paris-Brest</h3>
+					<p class="other">Revisité</p>
 				</div>
 				<p class="price">18€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -102,8 +102,8 @@
 
 			<div class="card slide_eight">
 				<div class="title_description">
-					<h3>Fondant au chocolat</h3>
-					<p class="other">Revisitée</p>
+					<h3>Macaron au chocolat d'exception</h3>
+					<p class="other">Et glace à la vanille de Madagascar</p>
 				</div>
 				<p class="price">22€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -111,8 +111,8 @@
 
 			<div class="card slide_nine">
 				<div class="title_description">
-					<h3>Millefeuille croustillant</h3>
-					<p class="other">Myrtilles et pâte d’amande</p>
+					<h3>Mousse au chocolat</h3>
+					<p class="other">Au piment d'Espelette et à la truffe noire</p>
 				</div>
 				<p class="price">23€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
