--- a/menu_3.html
+++ b/menu_3.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
-	<title>À la française - Ohmyfood</title>
+	<title>La note enchantée - Ohmyfood</title>
 </head>
 <body>
 	<header>
@@ -15,10 +15,10 @@
 	</header>
 
 	<section class="section_one_menu_one">
-		<img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française">
+		<img src="images/restaurants/La_note_enchantee.jpg" alt="Restaurant La note enchantée">
 		<div>
 			<div class="title_one">
-			<h1>À la française</h1>
+			<h1>La note enchantée</h1>
 			<a><i class="far fa-heart"></i></a>
 			</div>
 		</div>
@@ -31,8 +31,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_one">
 				<div class="title_description">
-					<h3>Tartare de poulpe acidulé</h3>
-					<p class="other">Au zests d'orange</p>
+					<h3>Ravioles de foie gras</h3>
+					<p class="other">Accompagnés de leur crème à la truffe</p>
 				</div>
 				<p class="price">25€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -40,8 +40,8 @@
 
 			<div class="card slide_two">
 				<div class="title_description">
-					<h3>Velouté aux légumes d'antan</h3>
-					<p class="other">Carotte, panais, topinambour</p>
+					<h3>Caviar osciètre </h3>
+					<p class="other">Sur blini à la farine de blé noir</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -49,8 +49,8 @@
 
 			<div class="card slide_three">
 				<div class="title_description">
-					<h3>Soupe à l'oignon</h3>
-					<p class="other">Revisitée</p>
+					<h3>Homard et espuma de potiron</h3>
+					<p class="other">Mariné aux zestes d'orange</p>
 				</div>
 				<p class="price">20€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -62,8 +62,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_four">
 				<div class="title_description">
-					<h3>Coquilles Saint-Jacques</h3>
-					<p class="other">Accompagnées d'une purée de panais</p>
+					<h3>Noix de coquilles Saint-Jacques</h3>
+					<p class="other">Sur lit de purée de céleri-rave</p>
 				</div>
 				<p class="price">40€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -71,17 +71,17 @@
 
 			<div class="card slide_five">
 				<div class="title_description">
-					<h3>Magret de canard</h3>
-					<p class="other">Et parmentier de pommes de terre</p>
+					<h3>Langoustine poêlée</h3>
+					<p class="other">Purée de patate douce</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
 			</div>
 
-			<div class="card slide_six">
+			<div class="card slide_five">
 				<div class="title_description">
-					<h3>Pigeonneau d’Ille-et-Vilaine</h3>
-					<p class="other">Sur son lit de gnocchis aux légumes</p>
+					<h3>Mijoté de queue de boeuf</h3>
+					<p class="other">Et riz sauvage aux zestes de citron</p>
 				</div>
 				<p class="price">44€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -93,8 +93,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_seven">
 				<div class="title_description">
-					<h3>Pétales de violettes glacés</h3>
-					<p class="other">Et purée de noisettes</p>
+					<h3>Macaron noisette et chocolat</h3>
+					<p class="other">Glace au caramel brun et sel de Guérande</p>
 				</div>
 				<p class="price">18€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -102,8 +102,8 @@
 
 			<div class="card slide_eight">
 				<div class="title_description">
-					<h3>Fondant au chocolat</h3>
-					<p class="other">Revisitée</p>
+					<h3>Baba au rhum revisité</h3>
+					<p class="other">Avec son coulis de citron</p>
 				</div>
 				<p class="price">22€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -111,8 +111,8 @@
 
 			<div class="card slide_nine">
 				<div class="title_description">
-					<h3>Millefeuille croustillant</h3>
-					<p class="other">Myrtilles et pâte d’amande</p>
+					<h3>Tarte au citron meringuée</h3>
+					<p class="other">Déstructurée</p>
 				</div>
 				<p class="price">23€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
