--- a/home_page.html
+++ b/home_page.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="home_page.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
-	<title>ohmyfood.com</title>
+	<title>Ohmyfood</title>
 </head>
 <body>
 	<div class="loader">
@@ -42,7 +42,7 @@
 		<div id="restaurants">		
 			<h2>Restaurants</h2>
 		<div class="all_card">
-				<a href="#" class="card">
+				<a href="menu_1.html" class="card">
 					<div class="new"><p>Nouveau</p></div>
 					<img src="images/restaurants/La_palette_du_gout.jpg" alt="Restaurant La palette du goût">
 					<div class="contents">
@@ -55,7 +55,7 @@
 					</div>
 				</a>
 			
-				<a href="#" class="card">
+				<a href="menu_2.html" class="card">
 					<div class="new"><p>Nouveau</p></div>
 					<img src="images/restaurants/La_note_enchantee.jpg" alt="Restaurant La note enchantée">
 					<div class="contents">
@@ -66,7 +66,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="card">
+				<a href="menu_3.html" class="card">
 					<div><img src="images/restaurants/A_la_francaise.jpg" alt="Restaurant À la française"></div>
 					<div class="contents">
 						<div class="description">
@@ -77,7 +77,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="card">
+				<a href="menu_4.html" class="card">
 					<img src="images/restaurants/Le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
 					<div class="contents">
 						<div class="description">
