--- a/menu_1.html
+++ b/menu_1.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
-	<title>La palette du goût - Ohmyfood.com</title>
+	<title>La palette du goût - Ohmyfood</title>
 </head>
 <body>
 	<header>
@@ -35,7 +35,7 @@
 					<p class="other">Au piment d'Espelette</p>
 				</div>
 				<p class="price">25€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_two">
