--- a/menu_2.html
+++ b/menu_2.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="menu.css">
 	<script src="https://kit.fontawesome.com/4626240a72.js" crossorigin="anonymous"></script>
-	<title>Le délice des sens - Ohmyfood</title>
+	<title>La note enchantée - Ohmyfood</title>
 </head>
 <body>
 	<header>
@@ -15,10 +15,10 @@
 	</header>
 
 	<section class="section_one_menu_one">
-		<img src="images/restaurants/Le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
+		<img src="images/restaurants/La_note_enchantee.jpg" alt="Restaurant La note enchantée">
 		<div>
 			<div class="title_one">
-			<h1>Le délice des sens</h1>
+			<h1>La note enchantée</h1>
 			<a><i class="far fa-heart"></i></a>
 			</div>
 		</div>
@@ -31,8 +31,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_one">
 				<div class="title_description">
-					<h3>Tartare de thon</h3>
-					<p class="other">Assaisonné au yuzu</p>
+					<h3>Ravioles de foie gras</h3>
+					<p class="other">Accompagnés de leur crème à la truffe</p>
 				</div>
 				<p class="price">25€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -40,8 +40,8 @@
 
 			<div class="card slide_two">
 				<div class="title_description">
-					<h3>Bouchée de homard croustillant</h3>
-					<p class="other">Et sa farandole de petits légumes</p>
+					<h3>Caviar osciètre </h3>
+					<p class="other">Sur blini à la farine de blé noir</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -49,8 +49,8 @@
 
 			<div class="card slide_three">
 				<div class="title_description">
-					<h3>Velouté de cèpes</h3>
-					<p class="other">Aux truffes</p>
+					<h3>Homard et espuma de potiron</h3>
+					<p class="other">Mariné aux zestes d'orange</p>
 				</div>
 				<p class="price">20€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -62,8 +62,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_four">
 				<div class="title_description">
-					<h3>Poulet rôti aux herbes de Provence</h3>
-					<p class="other">Et sa crème de truffe</p>
+					<h3>Noix de coquilles Saint-Jacques</h3>
+					<p class="other">Sur lit de purée de céleri-rave</p>
 				</div>
 				<p class="price">40€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -71,8 +71,8 @@
 
 			<div class="card slide_five">
 				<div class="title_description">
-					<h3>Langouste rôtie</h3>
-					<p class="other">Et ses légumes de saison</p>
+					<h3>Langoustine poêlée</h3>
+					<p class="other">Purée de patate douce</p>
 				</div>
 				<p class="price">35€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -80,8 +80,8 @@
 
 			<div class="card slide_five">
 				<div class="title_description">
-					<h3>Côte de boeuf Angus</h3>
-					<p class="other">Et sa purée de panais</p>
+					<h3>Mijoté de queue de boeuf</h3>
+					<p class="other">Et riz sauvage aux zestes de citron</p>
 				</div>
 				<p class="price">44€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -93,8 +93,8 @@
 			<img src="images/barre.png" alt="barre">
 			<div class="card slide_seven">
 				<div class="title_description">
-					<h3>Farandole de desserts</h3>
-					<p class="other">Du chef</p>
+					<h3>Macaron noisette et chocolat</h3>
+					<p class="other">Glace au caramel brun et sel de Guérande</p>
 				</div>
 				<p class="price">18€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -102,8 +102,8 @@
 
 			<div class="card slide_eight">
 				<div class="title_description">
-					<h3>Crème brulée</h3>
-					<p class="other">Revisitée</p>
+					<h3>Baba au rhum revisité</h3>
+					<p class="other">Avec son coulis de citron</p>
 				</div>
 				<p class="price">22€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
@@ -111,8 +111,8 @@
 
 			<div class="card slide_nine">
 				<div class="title_description">
-					<h3>Tiramisu</h3>
-					<p class="other">À la noisette</p>
+					<h3>Tarte au citron meringuée</h3>
+					<p class="other">Déstructurée</p>
 				</div>
 				<p class="price">23€</p>
 				<div class="check"><i class="fas fa-check"></i></div>
