--- a/menu_2.html
+++ b/menu_2.html
@@ -35,7 +35,7 @@
 					<p class="other">Accompagnés de leur crème à la truffe</p>
 				</div>
 				<p class="price">25€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_two">
@@ -44,7 +44,7 @@
 					<p class="other">Sur blini à la farine de blé noir</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_three">
@@ -53,7 +53,7 @@
 					<p class="other">Mariné aux zestes d'orange</p>
 				</div>
 				<p class="price">20€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -66,7 +66,7 @@
 					<p class="other">Sur lit de purée de céleri-rave</p>
 				</div>
 				<p class="price">40€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -75,7 +75,7 @@
 					<p class="other">Purée de patate douce</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -84,7 +84,7 @@
 					<p class="other">Et riz sauvage aux zestes de citron</p>
 				</div>
 				<p class="price">44€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -97,7 +97,7 @@
 					<p class="other">Glace au caramel brun et sel de Guérande</p>
 				</div>
 				<p class="price">18€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_eight">
@@ -106,7 +106,7 @@
 					<p class="other">Avec son coulis de citron</p>
 				</div>
 				<p class="price">22€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_nine">
@@ -115,7 +115,7 @@
 					<p class="other">Déstructurée</p>
 				</div>
 				<p class="price">23€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 	</div>
