--- a/menu_3.html
+++ b/menu_3.html
@@ -35,7 +35,7 @@
 					<p class="other">Au zests d'orange</p>
 				</div>
 				<p class="price">25€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_two">
@@ -44,7 +44,7 @@
 					<p class="other">Carotte, panais, topinambour</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_three">
@@ -53,7 +53,7 @@
 					<p class="other">Revisitée</p>
 				</div>
 				<p class="price">20€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -66,7 +66,7 @@
 					<p class="other">Accompagnées d'une purée de panais</p>
 				</div>
 				<p class="price">40€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -75,7 +75,7 @@
 					<p class="other">Et parmentier de pommes de terre</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_six">
@@ -84,7 +84,7 @@
 					<p class="other">Sur son lit de gnocchis aux légumes</p>
 				</div>
 				<p class="price">44€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -97,7 +97,7 @@
 					<p class="other">Et purée de noisettes</p>
 				</div>
 				<p class="price">18€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_eight">
@@ -106,7 +106,7 @@
 					<p class="other">Revisitée</p>
 				</div>
 				<p class="price">22€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_nine">
@@ -115,7 +115,7 @@
 					<p class="other">Myrtilles et pâte d’amande</p>
 				</div>
 				<p class="price">23€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 	</div>
