--- a/menu_1.html
+++ b/menu_1.html
@@ -44,7 +44,7 @@
 					<p class="other">Et ses copeaux de truffe noire</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_three">
@@ -53,7 +53,7 @@
 					<p class="other">Assaisonné à la truffe sur lit de caviar</p>
 				</div>
 				<p class="price">20€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -66,7 +66,7 @@
 					<p class="other">Accompagné de sa ribambelle de légumes</p>
 				</div>
 				<p class="price">40€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -75,7 +75,7 @@
 					<p class="other">À la truffe noire sur sa purée de panais</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_six">
@@ -84,7 +84,7 @@
 					<p class="other">Aux agrumes</p>
 				</div>
 				<p class="price">44€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -97,7 +97,7 @@
 					<p class="other">Revisité</p>
 				</div>
 				<p class="price">18€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_eight">
@@ -106,7 +106,7 @@
 					<p class="other">Et glace à la vanille de Madagascar</p>
 				</div>
 				<p class="price">22€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_nine">
@@ -115,7 +115,7 @@
 					<p class="other">Au piment d'Espelette et à la truffe noire</p>
 				</div>
 				<p class="price">23€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 	</div>
