--- a/menu_4.html
+++ b/menu_4.html
@@ -35,7 +35,7 @@
 					<p class="other">Assaisonné au yuzu</p>
 				</div>
 				<p class="price">25€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_two">
@@ -44,7 +44,7 @@
 					<p class="other">Et sa farandole de petits légumes</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_three">
@@ -53,7 +53,7 @@
 					<p class="other">Aux truffes</p>
 				</div>
 				<p class="price">20€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -66,7 +66,7 @@
 					<p class="other">Et sa crème de truffe</p>
 				</div>
 				<p class="price">40€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -75,7 +75,7 @@
 					<p class="other">Et ses légumes de saison</p>
 				</div>
 				<p class="price">35€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_five">
@@ -84,7 +84,7 @@
 					<p class="other">Et sa purée de panais</p>
 				</div>
 				<p class="price">44€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 
@@ -97,7 +97,7 @@
 					<p class="other">Du chef</p>
 				</div>
 				<p class="price">18€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_eight">
@@ -106,7 +106,7 @@
 					<p class="other">Revisitée</p>
 				</div>
 				<p class="price">22€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 
 			<div class="card slide_nine">
@@ -115,7 +115,7 @@
 					<p class="other">À la noisette</p>
 				</div>
 				<p class="price">23€</p>
-				<div class="check"><i class="fas fa-check"></i></div>
+				<div class="check"><i class="fas fa-circle-check"></i></div>
 			</div>
 		</div>
 	</div>
