--- a/menu_4.html
+++ b/menu_4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-			<a href="file:///Users/clarabernadou/Documents/OC/P3_bernadou_clara/home_page.html"><i class="fas fa-arrow-left"></i></a>
+			<a href="index.html"><i class="fas fa-arrow-left"></i></a>
 			<img src="images/logo/ohmyfood.png" alt="logo mobile">
 			<div></div>
 	</header>
