--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<h3>La palette du goût</h3>
 						<p>Ménilmontant</p></div>
 						<div class="box">
-							<i class="far fa-heart"></i>
+							<i class="fas fa-heart"></i>
 						</div>
 					</div>
 				</a>
@@ -62,7 +62,7 @@
 						<div class="description">
 						<h3>La note enchantée</h3>
 						<p>Charonne</p></div>
-						<div class="icon link_icon"><i class="far fa-heart"></i></div>
+						<div class="icon"><i class="fas fa-heart"></i></div>
 					</div>
 				</a>
 
@@ -73,7 +73,7 @@
 							<h3>À la française</h3>
 							<p>Cité Rouge</p>
 						</div>
-						<div class="icon"><i class="far fa-heart"></i></div>
+						<div class="icon"><i class="fas fa-heart"></i></div>
 					</div>
 				</a>
 
@@ -83,7 +83,7 @@
 						<div class="description">
 						<h3>Le délice des sens</h3>
 						<p>Folie-Méricout</p></div>
-						<div class="icon"><i class="far fa-heart"></i></div>
+						<div class="icon"><i class="fas fa-heart"></i></div>
 					</div>
 				</a>
 		</div>
